<resources>
    <string name="app_name">Here I Am</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="user">User</string>
    <string name="mapview">MapView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_screen_slide_pager">Welcome New User!</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDhfneop-nQ6nvgDZUOib7ZvwiHyIsqk0E</string>
    <string name="welcome_intro">Since this is your first time with the app, let\'s go through some basics! Feel free to click the floating icon on the bottom if you want to skip this tutorial. Otherwise, swipe left to continue.</string>
    <string name="friend_name">Friend Name:</string>
    <string name="darth_vader">Darth Vader</string>
    <string name="most_recent_location">Most Recent Location:</string>
    <string name="default_location">90.00001, -180.00001</string>
    <string name="last_updated">Updated:</string>
    <string name="default_time">11/11/11 00:00</string>
    <string name="your_name">Your Name:</string>
    <string name="your_profile_image">Your Profile Image</string>
    <string name="your_connected_friends">Your Connected Friends:</string>

    <!-- Detected Activity Strings -->
    <string name="driving">Driving</string>
    <string name="onFoot">On foot</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="notMoving">Not moving</string>
    <string name="unknown">Unknown</string>
    <string name="tilting">Tilting.</string>
    <string name="unidentifiableActivity">"Unidentifiable Activity: "</string>

    <!--String name for the Firebase Database-->
    <string name="FIREBASE_URL">https://here-i-am-1f9a0.firebaseio.com/</string>

    <!-- Invitation Strings -->
    <string name="action_deep_link">com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION</string>

    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Send App Invite</string>
    <string name="invitation_message">This app is terrific, we\'ll easily be able to keep track of each other\'s locations!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="no_friends">Currently, you have no friends.</string>
    <string name="profileRefString">profile.png</string>
    <string name="you">You</string>
    <string name="directions_on">Turn ON Directions</string>
    <string name="directions_off">Turn OFF Directions</string>
    <string name="wants_to_be_your_friend">Wants To Be Your Friend!</string>
    <string name="click_ok_to_accept">Click OK to accept this inviation and add this friend to your tracking group. Click NO to decline</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="alert_message">Alert Message</string>
    <string name="send_acknowledge">Send Acknowledge</string>
    <string name="turn_on_directions">Turn ON Directions</string>
    <string name="turn_by_turn_directions">Turn by Turn Directions</string>
    <string name="help">Help</string>
    <string name="dismiss_alert">Dismiss Alert</string>


</resources>
